feat: workflow
* typoo

* feat: add GitHub Actions CI/CD setup and commit message validation hook

* feat: add GET endpoint for retrieving a todo item by ID with Swagger documentation

---------
