# docs/swagger.yaml
@@ -11,7 +11,7 @@ definitions:
       title:
         type: string
     type: object
-host: localhost:8080
+host: gotut-api.germanywestcentral.azurecontainer.io:8080
 info:
   contact:
     email: support@swagger.io
@@ -88,6 +88,32 @@ paths:
           schema:
             type: string
       summary: Delete a todo
+      tags:
+      - todos
+    get:
+      consumes:
+      - application/json
+      description: Get a todo item by ID
+      parameters:
+      - description: Todo ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.ToDo'
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get a single todo
       tags:
       - todos
     put:
